# XSS-Tester

./: .gitignore  LICENSE  README.md  main.py  payloads.txt  pyproject.toml  setup.sh
Auth/: Manager.py  __init__.py
Interactsh/: Client.py  __init__.py
Models/: Finding.py  Spider.py  __init__.py
Reporter/: Reporter.py  __init__.py
Spider/: Spider.py  __init__.py
Tester/: Tester.py  __init__.py
tests/: test_auth.py  test_interactsh.py  test_models.py  test_reporter.py  test_spider.py  test_tester.py
